--- a/GreenBowlFoodsSystem/Views/RawMaterials/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/RawMaterials/Index.cshtml
@@ -30,7 +30,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Supplier)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
