--- a/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
@@ -24,7 +24,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
